# openclaw-nearai-worker

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  LICENSE  README.md  build-image.sh  clawdbot.json.template  deploy.sh  docker-compose.caddy.yml  docker-compose.nginx.yml  docker-compose.simple.yml  docker-compose.yml  entrypoint.sh  env.example  env.prod.example  moltbot.json.template  openclaw.json.template
.claude/skills/deploy-cvm/: SKILL.md
.github/workflows/: build.yml  watch-upstream.yml
compose-api/: Cargo.toml  Dockerfile  build-local.sh  build.rs  docker-compose.ironclaw.yml  docker-compose.worker.yml
compose-api/src/: backup.rs  compose.rs  dns.rs  error.rs  main.rs  names.rs  nginx_conf.rs  store.rs
deploy/: .env.dstack.example  build-image.sh  deploy.sh  dev.sh  docker-compose.dstack.yml  docker-compose.local.yml  docker-compose.nginx.yml  docker-compose.simple.yml  docker-compose.yml  env.prod.example  nginx-openclaw.conf
docs/: oauth.md
ingress/: Dockerfile  entrypoint.sh
ironclaw-local/: Dockerfile  README.md  entrypoint.sh  run.sh
ironclaw-worker/: Dockerfile  entrypoint.sh
ironclaw-worker/workspace/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
management-api/: Cargo.toml  Dockerfile
management-api/src/: docker.rs  main.rs  store.rs
oauth-service/: Cargo.toml  Dockerfile  README.md  env.example
oauth-service/src/: error.rs  main.rs  registry.rs
ssh-bastion/: Dockerfile  connect-worker.sh  entrypoint.sh  lookup-keys.sh
updater/: Dockerfile  updater.sh
worker/: .dockerignore  Dockerfile  agent-systemd-user.service  entrypoint.sh  env.example  openclaw-gateway.service  openclaw.json.template  openclaw.service  openclaw.user.service  patch-streaming.js  streaming.json
worker/workspace/: AGENTS.md  BOOTSTRAP.md  SOUL.md  TOOLS.md  USER.md
workspace/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  SOUL.md  TOOLS.md
workspace/skills/channel-setup/: SKILL.md
