[package]
name = "openclaw-management-api"
version = "0.1.0"
edition = "2021"
description = "Management API for multi-tenant OpenClaw deployment"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.44", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

# Docker
bollard = "0.20"

# Utilities
uuid = { version = "1.12", features = ["v4"] }
rand = "0.9"
hex = "0.4.3"
chrono = { version = "0.4.39", features = ["serde"] }
thiserror = "2"
anyhow = "1.0.95"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Async
futures = "0.3.31"
