[package]
name = "openclaw-oauth-service"
version = "0.1.0"
edition = "2021"
description = "Standalone OAuth routing and token exchange service for hosted IronClaw instances"

[workspace]

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.44", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
uuid = { version = "1.12", features = ["v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
thiserror = "2"
anyhow = "1.0.95"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
serde_urlencoded = "0.7"
sha2 = "0.10"
hex = "0.4.3"
secrecy = "0.10"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
